# prow-failure-analysis

./: .gitleaksignore  .pre-commit-config.yaml  Containerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: github-token-setup.md
src/prow_failure_analysis/: config.py  constants.py  main.py  utils.py
src/prow_failure_analysis/analysis/: analyzer.py  signatures.py
src/prow_failure_analysis/analysis/templates/: artifact_analysis.json.genji
src/prow_failure_analysis/gcs/: client.py  models.py
src/prow_failure_analysis/output/: github.py
src/prow_failure_analysis/parsing/: __init__.py  xunit_models.py  xunit_parser.py
src/prow_failure_analysis/processing/: preprocessor.py
src/prow_failure_analysis/security/: leak_detector.py
tests/: test_main.py  test_utils.py
tests/analysis/: test_analyzer.py
tests/config/: test_config.py
tests/gcs/: test_client.py  test_models.py
tests/output/: test_github.py
tests/parsing/: test_xunit_models.py  test_xunit_parser.py
tests/processing/: test_preprocessor.py
tests/security/: test_leak_detector.py
