[project]
name = "prow-failure-analysis"
version = "0.1.0"
description = "Diagnoses Prow pipeline failures and generates concise root cause reports."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Caleb Evans", email = "caevans@redhat.com"}
]
dependencies = [
    "google-cloud-storage>=2.14.0",
    "cordon>=0.2.1",
    "dspy>=2.5.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "tokenizers>=0.13.0",
]

[project.optional-dependencies]
github = ["PyGithub>=2.1.0"]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
prow-failure-analysis = "prow_failure_analysis.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
